Fixed honors section overlaping

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,32 @@ body {
 
   /* Honor Style start*/
 
+  .certCont {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .certCont > .cert {
+    width: 100%;
+  }
+
+  .certCont > .cert h2 {
+    width: 100%;
+    color: #5c5a5a;
+  }
+
+  .certCont > .cert img {
+    width: 100%;
+    height: 38vh;
+    padding-right: 2vw;
+    padding-left: 0vw;
+  }
+
+  .certCont > .cert p {
+    width: 100%;
+  }
+
   .ser_col {
     width: 100%;
     display: flex;
@@ -48,20 +74,15 @@ body {
   
   .cert {
     width: 100%;
+    padding: 0vh 4vw;
   }
   
-  .cert img {
-    height: 38vh;
-    left:50%;
-    padding-right: 2vw;
-    padding-left: 0vw;
-  }
-
   .badge {
     width: 100%;
   }
   
   .badge img {
+    width: 100%;
     height: 40vh;
     padding-right: 0vw;
     padding-top: 3vw;
@@ -69,7 +90,12 @@ body {
     padding-left: 0vw;
   }
 
-  @media screen and (min-width: 768px) {
+  .badge p {
+    width: 100%;
+  }
+
+@media screen and (min-width: 768px) {
+    
     .ser_col p {
       padding-left: 2vw;
       padding-right: 2vw;
@@ -77,13 +103,13 @@ body {
     .sp_text>h1 {
       margin-top: 4vh;
     }
-    .cert {
-      width: 30%;
+    
+    .certCont > .cert {
+      width: 33%;
+      padding: 0vh 1vw;
     }
-    .badge {
-      width: 30%;
-    }
-  }
+
+}
 
   /* Honor Style end*/
 
@@ -299,7 +325,7 @@ a {
   height: 200px;
   position: relative;
   border-radius: 50%;
-  margin: 0 auto 100px auto; }
+  margin: 0 auto 50px auto; }
   .site-service-item .icon span {
     font-size: 40px;
     color: #080b0e;
